{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 56,
  "lineage": "8ac09df1-55d3-e8ff-6ccd-1e7ee98b1343",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537777694183:vpc/vpc-0854cc7923906c7b5",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-004aa20d4ca381e92",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-080885f8cc39fd6f9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0854cc7923906c7b5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09eb285039204b184",
            "owner_id": "537777694183",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08982f1c5bf93d976",
            "arn": "arn:aws:ec2:us-east-1:537777694183:instance/i-028f4bad0e7ffc828",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028f4bad0e7ffc828",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fa75aa3f9354bf06"
              }
            ],
            "primary_network_interface_id": "eni-0fa75aa3f9354bf06",
            "private_dns": "ip-172-31-25-247.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.247",
            "public_dns": "ec2-13-221-20-128.compute-1.amazonaws.com",
            "public_ip": "13.221.20.128",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e177cf5b1304c608",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg_my_server"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d095b0446aafa818",
            "tags": {
              "Name": "MyServer"
            },
            "tags_all": {
              "Name": "MyServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a56892f282f3f7e8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537777694183",
            "id": "i-028f4bad0e7ffc828",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.sg_my_server",
            "data.aws_vpc.main",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_my_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537777694183:security-group/sg-0a56892f282f3f7e8",
            "description": "MyServer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a56892f282f3f7e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "173.178.144.233/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_my_server",
            "name_prefix": "",
            "owner_id": "537777694183",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0854cc7923906c7b5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537777694183",
            "id": "sg-0a56892f282f3f7e8",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537777694183:security-group-rule/sgr-08f17d2a5090cad7f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08f17d2a5090cad7f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a56892f282f3f7e8",
            "security_group_rule_id": "sgr-08f17d2a5090cad7f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537777694183",
            "id": "sgr-08f17d2a5090cad7f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_my_server",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537777694183:security-group-rule/sgr-0bf1f18cbbc207e0c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0bf1f18cbbc207e0c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a56892f282f3f7e8",
            "security_group_rule_id": "sgr-0bf1f18cbbc207e0c",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537777694183",
            "id": "sgr-0bf1f18cbbc207e0c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_my_server",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537777694183:security-group-rule/sgr-0735ea88bfa5e72b9",
            "cidr_ipv4": "173.178.144.233/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0735ea88bfa5e72b9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a56892f282f3f7e8",
            "security_group_rule_id": "sgr-0735ea88bfa5e72b9",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537777694183",
            "id": "sgr-0735ea88bfa5e72b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_my_server",
            "data.aws_vpc.main",
            "data.external.myipv4"
          ]
        }
      ]
    }
  ]
}